priority-notes-api/k8s/kustomization/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: priority-notes-prod
  labels:
    environment: prod
    owner: application
