priority-notes-api/k8s/kustomization/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: priority-notes-deployment
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: priority-notes-api
          imagePullPolicy: Always
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
