priority-notes-api/k8s/kustomization/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: priority-notes-service
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: null
