priority-notes-api/k8s/kustomization/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: priority-notes-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: priority-notes.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: priority-notes-service
                port:
                  number: 80
